--- a/index.html
+++ b/index.html
@@ -1,25 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lenis-Learning</title>
-    <link rel="stylesheet" href="https://unpkg.com/lenis@1.3.10/dist/lenis.css">
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/lenis@1.3.10/dist/lenis.css"
+    />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-</head>
-<body>
-    <div class="w-full">
-        <div class="w-full h-screen text-white flex items-center justify-center  bg-zinc-900">
-            <h3 class="">Samrat Kumar sahu</h3>
+    <style>
+      .grid > div {
+        grid-row: var(--r);
+        grid-column: var(--c);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="w-full bg-zinc-900">
+      <div class="grid grid-cols-8 grid-rows-20 gap-2 overflow-hidden">
+        <div class="elem col-span-1 row-span-1" style="--r: 1; --c: 3">
+          <img src="./images/img1.jpg" alt="" />
         </div>
-        <div class="w-full h-screen text-white flex items-center justify-center  bg-zinc-800">
-             <h3 class="">Samrat Kumar sahu</h3>
+        <div class="elem col-span-1 row-span-1" style="--r: 1; --c: 7">
+          <img src="./images/img2.jpg" alt="" />
         </div>
-        <div class="w-full h-screen text-white flex items-center justify-center  bg-zinc-700">
-             <h3 class="">Samrat Kumar sahu</h3>
+        <div class="elem col-span-1 row-span-1" style="--r: 2; --c: 2">
+          <img src="./images/img3.jpg" alt="" />
         </div>
+        <div class="elem col-span-1 row-span-1" style="--r: 2; --c: 6">
+          <img src="./images/img4.jpg" alt="" />
+        </div>
+        <div class="elem col-span-1 row-span-1" style="--r: 3; --c: 4">
+          <img src="./images/img5.jpg" alt="" />
+        </div>
+        <div class="elem col-span-1 row-span-1" style="--r: 3; --c: 8">
+          <img src="./images/img6.jpg" alt="" />
+        </div>
+        <div class="elem col-span-1 row-span-1" style="--r: 4; --c: 1">
+          <img src="./images/img7.jpg" alt="" />
+        </div>
+        <div class="elem col-span-1 row-span-1" style="--r: 4; --c: 4">
+          <img src="./images/img8.jpg" alt="" />
+        </div>
+        <div class="elem col-span-1 row-span-1" style="--r: 5; --c: 2">
+          <img src="./images/img9.jpg" alt="" />
+        </div>
+        <div class="elem col-span-1 row-span-1" style="--r: 5; --c: 6">
+          <img src="./images/img10.jpg" alt="" />
+        </div>
+        <div class="elem col-span-1 row-span-1" style="--r: 6; --c: 3">
+          <img src="./images/img11.jpg" alt="" />
+        </div>
+        <div class="elem col-span-1 row-span-1" style="--r: 6; --c: 7">
+          <img src="./images/img12.jpg" alt="" />
+        </div>
+        <div class="elem col-span-1 row-span-1" style="--r: 7; --c: 5">
+          <img src="./images/img13.jpg" alt="" />
+        </div>
+        <div class="elem col-span-1 row-span-1" style="--r: 7; --c: 8">
+          <img src="./images/img14.jpg" alt="" />
+        </div>
+        <div class="elem col-span-1 row-span-1" style="--r: 8; --c: 1">
+          <img src="./images/img15.jpg" alt="" />
+        </div>
+        <div class="elem col-span-1 row-span-1" style="--r: 8; --c: 4">
+          <img src="./images/img16.jpg" alt="" />
+        </div>
+        <div class="elem col-span-1 row-span-1" style="--r: 9; --c: 2">
+          <img src="./images/img17.jpg" alt="" />
+        </div>
+        <div class="elem col-span-1 row-span-1" style="--r: 9; --c: 6">
+          <img src="./images/img18.jpg" alt="" />
+        </div>
+        <div class="elem col-span-1 row-span-1" style="--r: 10; --c: 3">
+          <img src="./images/img19.jpg" alt="" />
+        </div>
+        <div class="elem col-span-1 row-span-1" style="--r: 10; --c: 7">
+          <img src="./images/img20.jpg" alt="" />
+        </div>
+      </div>
+      <div
+        class="fixed top-0 font-['Helvetica_Now_Display'] left-0 w-full h-screen flex flex-col items-center justify-center text-white"
+      >
+        <h1 class="text-8xl uppercase mb-4">
+          Thomas Vance
+          <sup>&reg;</sup>
+        </h1>
+        <h2 class="text-5xl">並外れたファッション</h2>
+      </div>
+      <div
+        class="w-full h-screen bg-[#d1d1d1] flex items-center justify-center mx-auto py-96 relative z-[999] text-center"
+      >
+        <p
+          class="text-black text-5xl w-3/4 leading-[4.2rem] font-regular text-left"
+        >
+          From the dawn of civilisation onwards crowds have always undergone the
+          influence of illusions. It is to the creators of illusions that they
+          have raised more temples, statues, and altars than to any other class
+          of men<sup>&reg;</sup>
+        </p>
+      </div>
     </div>
-    <script src="https://unpkg.com/lenis@1.3.10/dist/lenis.min.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+    <script src="https://unpkg.com/lenis@1.3.10/dist/lenis.min.js"></script>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
