--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </style>
   </head>
   <body>
-    <div class="w-full bg-zinc-900">
+    <div class="w-full bg-[#dfd2cc]">
       <div class="grid grid-cols-8 grid-rows-20 gap-2 overflow-hidden">
         <div class="elem col-span-1 row-span-1" style="--r: 1; --c: 3">
           <img src="./images/img1.jpg" alt="" />
@@ -81,16 +81,16 @@
         </div>
       </div>
       <div
-        class="fixed top-0 font-['Helvetica_Now_Display'] left-0 w-full h-screen flex flex-col items-center justify-center text-white"
+        class="fixed top-0 font-['Helvetica_Now_Display'] left-0 w-full h-screen flex flex-col items-center justify-center text-black"
       >
         <h1 class="text-8xl uppercase mb-4">
           Thomas Vance
           <sup>&reg;</sup>
         </h1>
-        <h2 class="text-5xl">並外れたファッション</h2>
+        <h2 class="text-4xl">並外れたファッション</h2>
       </div>
       <div
-        class="w-full h-screen bg-[#d1d1d1] flex items-center justify-center mx-auto py-96 relative z-[999] text-center"
+        class="w-full h-screen bg-[#c2bcbc] flex items-center justify-center mx-auto py-96 relative z-[999] text-center"
       >
         <p
           class="text-black text-5xl w-3/4 leading-[4.2rem] font-regular text-left"
